gccida/c3/try_copy_prop
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10424:4: error: expected ';' after expression
rtx v9; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10424:5: error: use of undeclared identifier 'v9'
rtx v9; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10427:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10427:5: error: use of undeclared identifier 'v12'
rtx v12; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10430:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10430:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10433:4: error: expected ';' after expression
rtx v19; // [rsp+10h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10433:5: error: use of undeclared identifier 'v19'
rtx v19; // [rsp+10h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10435:4: error: expected ';' after expression
rtx v21; // [rsp+20h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10435:5: error: use of undeclared identifier 'v21'
rtx v21; // [rsp+20h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10436:4: error: expected ';' after expression
rtx x; // [rsp+28h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10436:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+28h] [rbp-50h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10440:1: error: use of undeclared identifier 'v19'
v19 = cfun->emit->x_regno_reg_rtx[regno]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10457:1: error: use of undeclared identifier 'v9'
v9 = ( rtx)rtx[2]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10458:17: error: use of undeclared identifier 'v9'
if ( *( _WORD *)v9 != 47 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10459:1: error: use of undeclared identifier 'v9'
v9 = single_set_2( rtx, *( rtx *)&rtx[2]); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10459:33: error: expected expression
v9 = single_set_2( rtx, *( rtx *)&rtx[2]); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10460:6: error: use of undeclared identifier 'v9'
if ( v9 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/loop.c:10462:24: error: use of undeclared identifier 'v9'
v10.rtwint = ( __int64)v9->fld[0]; 
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_copy_prop/src/obj/loop.o] Error 1
